# dirgrowth

./: Cargo.toml  readme.md
src/: dir_growth.rs  main.rs
