[package]
name = "dirgrowth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="3.1.8", features=["derive"] }
chrono = "0.4.19"
human_bytes = "0.3.1"
termsize = "0.1.6"
walkdir = "2.3.2"
